Fixed collapse behavior (pointer-events)

--- a/src/styles/Collapse.scss
+++ b/src/styles/Collapse.scss
@@ -34,6 +34,7 @@
         padding:20px;
         color:$primary;
         font-weight: $regular-weight;
+        pointer-events: none;
 
         p{
             margin:0;
